[metadata]
name = optunizer
version = 0.1.7
author = Roman Pashkovsky
author_email = romapasky@gmail.com
description = Optuna extension for JSON and YAML configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romanzes637/optunizer
project_urls =
    Bug Tracker = https://github.com/romanzes637/optunizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    optuna
    python-dotenv
    pyyaml
    

[options.packages.find]
where = ./src